--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,6 +1,22 @@
-.container {
+.nav {
+   width: 100vw;
+   height: 5rem;
+   position: fixed;
+   top: 0;
+   z-index: 11;
+}
+
+.nav_top {
+   height: 2rem;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: ;
+}
+
+.nav-header {
     display: flex;
-    background-color: rgb(242, 155, 42);
+    background-color: transparent;
 }
 
 .logo {
@@ -8,6 +24,7 @@
     align-items: center;
     flex: 1;
     gap: 0.2rem;
+    
 }
  .logo>img {
     width: 2.5rem;
